# MacroTracker

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  frag.glsl  frag_default_2d.glsl  macro_runtime_log.txt  vert.glsl  vert_default_2d.glsl
glsl/: frag_flat_2d.glsl
include/: Common.h  Draw.h  Event.h  MacroDatabase.h  UI.h  UStr.h
src/: Draw.c  Event.c  MacroDatabase.c  UI.c  UStr.c  main.c
